err/neighborhoodize.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Fiona-1.7.11.dist-info'...
Listing './lib/python3.5/site-packages/Neighborhoodize-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/Shapely-1.6.3.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/click_plugins'...
Listing './lib/python3.5/site-packages/click_plugins-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/cligj'...
Listing './lib/python3.5/site-packages/cligj-0.4.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/fastkml'...
Listing './lib/python3.5/site-packages/fastkml-0.11.egg-info'...
Listing './lib/python3.5/site-packages/fiona'...
Listing './lib/python3.5/site-packages/fiona/.libs'...
Listing './lib/python3.5/site-packages/fiona/fio'...
Listing './lib/python3.5/site-packages/fiona/gdal_data'...
Listing './lib/python3.5/site-packages/fiona/proj_data'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/neighborhoodize'...
Compiling './lib/python3.5/site-packages/neighborhoodize/common.py'...
***   File "./lib/python3.5/site-packages/neighborhoodize/common.py", line 23
    def __init__(self, (map_name, filepath, parser_fn)):
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neighborhoodize/data'...
Listing './lib/python3.5/site-packages/neighborhoodize/data/city_of_chicago'...
Listing './lib/python3.5/site-packages/neighborhoodize/data/nyc'...
Listing './lib/python3.5/site-packages/neighborhoodize/data/zillow'...
Listing './lib/python3.5/site-packages/neighborhoodize/data/zillow/ZillowNeighborhoods-IL'...
Listing './lib/python3.5/site-packages/neighborhoodize/data/zillow/ZillowNeighborhoods-NY'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygeoif'...
Listing './lib/python3.5/site-packages/pygeoif-0.7.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shapely'...
Listing './lib/python3.5/site-packages/shapely/.libs'...
Listing './lib/python3.5/site-packages/shapely/algorithms'...
Listing './lib/python3.5/site-packages/shapely/examples'...
Listing './lib/python3.5/site-packages/shapely/geometry'...
Listing './lib/python3.5/site-packages/shapely/speedups'...
Listing './lib/python3.5/site-packages/shapely/vectorized'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
